# aicp

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml  run.sh
src/: app.py
